--- a/formation EMF 2/.settings/org.eclipse.core.resources.prefs
+++ b/formation EMF 2/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Tue Jul 13 09:23:10 CEST 2010
+#Tue Jul 13 14:55:19 CEST 2010
 eclipse.preferences.version=1
 encoding//model/relational.ecore=UTF-8
+encoding//model/relational.ecorediag=UTF-8
